Scheduler - Fix all day appointment text alignment in the Agenda view (T904112) (#13693)

--- a/styles/widgets/common/scheduler.less
+++ b/styles/widgets/common/scheduler.less
@@ -83,8 +83,10 @@
     .dx-scheduler-appointment-content-details {
         margin-top: 2px;
 
-        .dx-scheduler-appointment-content-date {
-            line-height: 0.8;
+        .dx-scheduler-work-space:not(.dx-scheduler-agenda) {
+            .dx-scheduler-appointment-content-date {
+                line-height: 0.8;
+            }
         }
     }
 
